# morpheus-oracle

./: CITATION.cff  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt
examples/decision-tree-tuner/: CMakeLists.txt  decision_tree_tuner.cpp  tree.txt
examples/decision-tree-tuner/tree_bin/: tree.txt
examples/random-forest-tuner/: CMakeLists.txt  random_forest_tuner.cpp
examples/random-forest-tuner/forest/: tree_0.txt  tree_1.txt  tree_2.txt  tree_3.txt
examples/random-forest-tuner/forest_bin/: forest.txt
examples/run-first-tuner/: CMakeLists.txt  run_first_tuner.cpp
experiments/: CMakeLists.txt
experiments/data/fe-timings/a64fx/: runtimes-dt-openmp.csv  runtimes-dt-serial.csv  runtimes-rf-openmp.csv  runtimes-rf-serial.csv
experiments/data/fe-timings/ampere/: runtimes-dt-cuda.csv  runtimes-rf-cuda.csv
experiments/data/fe-timings/archer2/: runtimes-dt-openmp.csv  runtimes-dt-serial.csv  runtimes-rf-openmp.csv  runtimes-rf-serial.csv
experiments/data/fe-timings/cirrus/: runtimes-dt-cuda.csv  runtimes-dt-openmp.csv  runtimes-dt-serial.csv  runtimes-rf-cuda.csv  runtimes-rf-openmp.csv  runtimes-rf-serial.csv
experiments/data/fe-timings/instinct/: runtimes-dt-hip.csv  runtimes-rf-hip.csv
experiments/data/fe-timings/xci/: runtimes-dt-openmp.csv  runtimes-dt-serial.csv  runtimes-rf-openmp.csv  runtimes-rf-serial.csv
experiments/data/forests/extract_clf/a64fx-square_set-openmp-1000/baseline/: tree_10.txt  tree_15.txt  tree_18.txt  tree_19.txt  tree_21.txt  tree_27.txt  (+26 more)
experiments/data/profiling_runs/: a64fx-square_set-openmp-1000.csv  a64fx-square_set-serial-1000.csv  ampere-square_set-cuda-1000.csv  archer2-square_set-openmp-1000.csv  archer2-square_set-serial-1000.csv  cirrus-square_set-cuda-1000.csv  cirrus-square_set-openmp-1000.csv  cirrus-square_set-serial-1000.csv  instinct-square_set-hip-1000.csv  xci-square_set-openmp-1000.csv  xci-square_set-serial-1000.csv
experiments/data/test_lists/: list-matrices-a64fx-square_set-openmp-1000.txt  list-matrices-a64fx-square_set-serial-1000.txt  list-matrices-ampere-square_set-cuda-1000.txt  list-matrices-archer2-square_set-openmp-1000.txt  list-matrices-archer2-square_set-serial-1000.txt  list-matrices-cirrus-square_set-cuda-1000.txt  list-matrices-cirrus-square_set-openmp-1000.txt  list-matrices-cirrus-square_set-serial-1000.txt  list-matrices-instinct-square_set-hip-1000.txt  list-matrices-xci-square_set-openmp-1000.txt  list-test-ampere-square_set-cuda-1000.txt  list-test-cirrus-square_set-cuda-1000.txt  list-test-cirrus-square_set-openmp-1000.txt  list-test-instinct-square_set-hip-1000.txt  list-test-xci-square_set-openmp-1000.txt  list-test-xci-square_set-serial-1000.txt
experiments/data/trees/extract_clf/a64fx-square_set-serial-1000/: baseline_tree.txt
experiments/data/trees/extract_clf/ampere-square_set-cuda-1000/: baseline_tree.txt  tuned_tree.txt
experiments/data/trees/extract_clf/archer2-square_set-openmp-1000/: baseline_tree.txt  tuned_tree.txt
experiments/data/trees/extract_clf/archer2-square_set-serial-1000/: baseline_tree.txt
experiments/data/trees/extract_clf/cirrus-square_set-cuda-1000/: baseline_tree.txt  tuned_tree.txt
experiments/data/trees/extract_clf/cirrus-square_set-openmp-1000/: baseline_tree.txt  tuned_tree.txt
experiments/data/trees/extract_clf/cirrus-square_set-serial-1000/: tuned_tree.txt
experiments/data/trees/extract_clf/instinct-square_set-hip-1000/: baseline_tree.txt  tuned_tree.txt
experiments/data/trees/extract_clf/xci-square_set-openmp-1000/: baseline_tree.txt  tuned_tree.txt
experiments/tuners_comparison/scripts/archer2/: README.md  build.comparison.slurm  build.sh  merge_runs.sh  run.comparison.slurm  run.sh
experiments/tuners_comparison/scripts/cirrus/: README.md  build.comparison.slurm  build.sh  merge_runs.sh  run.comparison.slurm  run.sh
experiments/tuners_comparison/scripts/isambard_a64fx/: README.md  build.comparison.pbs  build.sh  run.comparison.pbs  run.sh
experiments/tuners_comparison/scripts/isambard_ampereq/: README.md  build.sh  merge_runs.sh  run.comparison.pbs  run.sh
experiments/tuners_comparison/scripts/isambard_amperq/: README.md  merge_runs.sh
experiments/tuners_comparison/scripts/isambard_instinctq/: README.md  build.sh  merge_runs.sh  run.comparison.pbs  run.sh
experiments/tuners_comparison/scripts/isambard_xci/: README.md  build.comparison.pbs  build.sh  run.comparison.pbs  run.sh
experiments/tuners_comparison/src/: CMakeLists.txt  decision-tree.cpp  random-forest.cpp
profiling-runs/benchmarks/spmv/: CMakeLists.txt  spmv.cpp
src/: CMakeLists.txt  MorpheusOracle_DecisionTree.hpp  MorpheusOracle_DecisionTreeTuner.hpp  MorpheusOracle_FeatureExtraction.hpp  MorpheusOracle_FeatureExtractionFunctors.hpp  MorpheusOracle_Loader.hpp  MorpheusOracle_MLFunctor.hpp  MorpheusOracle_MLTuner.hpp  MorpheusOracle_Macros.hpp  MorpheusOracle_RandomForest.hpp  MorpheusOracle_RandomForestTuner.hpp  MorpheusOracle_RunFirstFunctor.hpp  MorpheusOracle_RunFirstFunctors.hpp  MorpheusOracle_RunFirstTuner.hpp  MorpheusOracle_Tune.hpp  MorpheusOracle_TuneMultiply.hpp  MorpheusOracle_TypeTraits.hpp  MorpheusOracle_Utils.hpp  MorpheusOracle_fwd.hpp  Morpheus_Oracle.hpp  dummy.cpp
src/fwd/: MorpheusOracle_Fwd_DecisionTree.hpp  MorpheusOracle_Fwd_DecisionTreeTuner.hpp  MorpheusOracle_Fwd_MLFunctor.hpp  MorpheusOracle_Fwd_MLTuner.hpp  MorpheusOracle_Fwd_RandomForest.hpp  MorpheusOracle_Fwd_RandomForestTuner.hpp  MorpheusOracle_Fwd_RunFirstFunctor.hpp  MorpheusOracle_Fwd_RunFirstTuner.hpp
src/impl/: MorpheusOracle_Loader_Impl.hpp  MorpheusOracle_Loader_Utils.cpp  MorpheusOracle_Loader_Utils.hpp  MorpheusOracle_TuneMultiply_Impl.hpp  MorpheusOracle_Tune_Impl.hpp
src/impl/DecisionTree/: MorpheusOracle_Loader_Impl.hpp  MorpheusOracle_TuneMultiply_Impl.hpp  MorpheusOracle_Tune_Impl.hpp
src/impl/ML/: MorpheusOracle_Tune_Impl.hpp
src/impl/RandomForest/: MorpheusOracle_Loader_Impl.hpp  MorpheusOracle_TuneMultiply_Impl.hpp  MorpheusOracle_Tune_Impl.hpp
src/impl/RunFirst/: MorpheusOracle_TuneMultiply_Impl.hpp  MorpheusOracle_Tune_Impl.hpp
(+4301 files in other folders)
